--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=sa
       - SPRING_DATASOURCE_PASSWORD=password
       - SPRING_DATASOURCE_DIALECT=org.hibernate.dialect.H2Dialect
-      - security.cors.allowedOrigins=http://localhost:3000,http://192.168.61.221:3000
+      - security.cors.allowedOrigins=http://localhost:3000,http://localhost:5173,http://192.168.61.221:3000
 
 volumes:
   postgres_data:
