--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,46 @@
-#version: '3.8'
-
 services:
 
   db:
     image: postgres:17
-    container_name: postgres-db
+    container_name: adventure-postgres-db
     restart: always
     environment:
-      POSTGRES_DB: appdb
-      POSTGRES_USER: appuser
+      POSTGRES_DB: adventure-game
+      POSTGRES_USER: admin
       POSTGRES_PASSWORD: secretpassword
-    ports:
-      - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - adventure-game-postgres-data:/var/lib/postgresql/data
     networks:
-      - app-network
+      - adventure-game-network
 
   frontend:
     build:
       context: ./adventure.client
       dockerfile: Dockerfile
     ports:
-      - "3000:80"  # React über Nginx
+      - "8680:80"  # React über Nginx
     depends_on:
       - backend
     networks:
-      - app-network
+      - adventure-game-network
+      - container_app_network 
   
-
   backend:
     build:
       context: ./adventure.server
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "8688:8080"
     networks:
-      - app-network
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:h2:mem:testdb
-      - SPRING_DATASOURCE_DRIVER=org.h2.Driver
-      - SPRING_DATASOURCE_USERNAME=sa
-      - SPRING_DATASOURCE_PASSWORD=password
-      - SPRING_DATASOURCE_DIALECT=org.hibernate.dialect.H2Dialect
-      - security.cors.allowedOrigins=http://localhost:3000,http://localhost:5173,http://192.168.61.221:3000
+      - adventure-game-network
+      - container_app_network 
 
 volumes:
-  postgres_data:
+  adventure-game-postgres-data:
+  
 
 networks:
-  app-network:
+  adventure-game-network:
     driver: bridge
+  container_app_network:
+    external: true
