--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,9 @@ services:
     build:
       context: ./adventure.server
       dockerfile: Dockerfile
+      args:
+        BACKEND_SUBPATH: "/adventure-game-api"  
+        CORS_LIST: "https://elitegames.v6.rocks"
     ports:
       - "8688:8080"    
     environment:
